@@ -485,7 +485,7 @@ public:
     /** Set the Exif user comments from image. Look Exif specification for more details about this tag.
         Return true if Exif user comments have been changed in metadata.
      */
-    bool setExifComment(const QString& comment) const;
+    bool setExifComment(const QString& comment, bool writeDescription = true) const;
 
     /** Get an Exif tags content like a string. If 'escapeCR' parameter is true, the CR characters
         will be removed. If Exif tag cannot be found a null string is returned.
