@@ -304,18 +304,19 @@ static bool is7BitAscii(const QByteArray& s)
     return true;
 }
 
-bool MetaEngine::setExifComment(const QString& comment) const
+bool MetaEngine::setExifComment(const QString& comment, bool writeDescription) const
 {
     try
     {
+        if (writeDescription)
+            removeExifTag("Exif.Image.ImageDescription");
+
         removeExifTag("Exif.Photo.UserComment");
 
         if (!comment.isNull())
         {
-            if (getExifTagString("Exif.Image.ImageDescription", false).isNull())
-            {
+            if (writeDescription)
                 setExifTagString("Exif.Image.ImageDescription", comment);
-            }
 
             // Write as Unicode only when necessary.
             QTextCodec* latin1Codec = QTextCodec::codecForName("iso8859-1");
